--- a/templates/public/documents_regiments.html
+++ b/templates/public/documents_regiments.html
@@ -23,11 +23,13 @@
                 <th>Baixar</th>
             </thead>
             {% for document in documents %}
+            {% if "deleted" not in document %}
             <tr>
                 <td>{{ document.cod }}</td>
                 <td>{{ document.title }}</td>
                 <td><a href="{{ url_for('public.download_documents', initials=std.post_graduation.initials, filename=document.file) }}" target="_blank"><span class="glyphicon glyphicon-download-alt" aria-hidden="true"></span></a></td>
             </tr>
+            {% endif %}
             {% endfor %}
         </table>
     </div>
