--- a/templates/public/home.html
+++ b/templates/public/home.html
@@ -115,22 +115,33 @@
             {% if events %}
             <table class="schedule-table">
                 {% for event in events %}
+                {% if "deleted" not in event %}
+                {% if loop.revindex < 4 %}
                 <tr class="schedule-container">
                     <td class="schedule-container-date">
                         <ul>
-                            <li class="schedule-date-day">{{ event.time.strftime("%d") }}</li>
-                            <li class="schedule-date-month">{{ event.time.strftime("%b").upper() }}</li>
-                            <li class="schedule-date-year">{{ event.time.strftime("%Y") }}</li>
+                            <li class="schedule-date-day">{{ event.initialDate.strftime("%d") }}</li>
+                            <li class="schedule-date-month">{{ event.initialDate.strftime("%b").upper() }}</li>
+                            <li class="schedule-date-year">{{ event.initialDate.strftime("%Y") }}</li>
                         </ul>
                     </td>
                     <td class="schedule-container-info">
                         <h4>{{ event.title }}</h4>
                         <p>
-                            Local: {{ event.location }}<br/>
-                            Horário: {{ event.time.strftime("%H:%M") }}<br/>
+                            {% if event.finalDate != "" %}
+                            Encerramento: {{ event.finalDate.strftime("%d/%m/%Y") }}<br/>
+                            {% endif %}
+                            {% if event.hour != "" %}
+                            Horário: {{ event.hour }}<br/>
+                            {% endif %}
+                            {% if event.link != "" %}
+                            <a href="{{ event.link }}">Mais informações</a>
+                            {% endif %}
                         </p>
                     </td>
                 </tr>
+                {% endif %}
+                {% endif %}
                 {% endfor %}
             </table>
             {% else %}
@@ -147,6 +158,7 @@
             <table class="schedule-table">
                 {% for report in final_reports %}
                 {% if "deleted" not in report %}
+                {% if loop.revindex < 4 %}
                 <tr class="schedule-container">
                     <td class="schedule-container-date">
                         <ul>
@@ -166,6 +178,7 @@
                         </p>
                     </td>
                 </tr>
+                {% endif %}
                 {% endif %}
                 {% endfor %}
             </table>
@@ -272,7 +285,9 @@
         </p>
         <div class="autoplay">
             {% for institution in institutions_with_covenant %}
+            {% if "deleted" not in institution %}
             <div><img src="/static/assets/{{ institution.logoFile }}" alt="{{ institution.name }}"/></div>
+            {% endif %}
             {% endfor %}
         </div>
     </div>
