CRUD de Artigos

--- a/templates/admin/layout.html
+++ b/templates/admin/layout.html
@@ -87,6 +87,13 @@
                             <li><a href="{{ url_for('crud_books.delete_book') }}">Deletar livros</a></li>
                         </ul>
                     </li>
+                    <li><a href="">Artigos</a>
+                        <ul>
+                            <li><a href="{{ url_for('crud_articles.add_article') }}">Adicionar artigos</a></li>
+                            <li><a href="{{ url_for('crud_articles.edit_article') }}">Editar artigos</a></li>
+                            <li><a href="{{ url_for('crud_articles.delete_article') }}">Deletar livros</a></li>
+                        </ul>
+                    </li>
                     <li><a href="">Intercâmbios</a>
                         <ul>
                         <li><a href="{{ url_for('admin.participations') }}">Adicionar intercâmbios</a></li>
