Duas mudanças principais
Primeira mudança diz respeito a umas mudanças requisitadas por Maradona para melhor fazer o deploy(questão do servidor de db e aplicação estarem separados), essas mudanças já tinham sido feitas no master e agora to fazendo aqui só pra não ter muito problema na hora de fazer o merge, a outra mudança diz respeito as disciplinas, alguns cursos tem mestrado e doutorado, o que eu fiz foi adicionar meio que uma copia da aba de crud de disciplinas que aparece apenas nas pos que tenham os dois, eu poderia ter colocado um select extra na hora de adicionar a disciplina, mas eu achei isso meio deselegante, pra os cursos que só tem mestrado, aí eu deixei assim, o tipo de curso é passado por meio de um par
ametro na url, eu acho que a database de disciplinas ta meio bagunçada, mas acho que é só besteira minha, outra coisa importante que eu fiz foi separar o crud de disciplinas em uma blueprint separada, como eu falei em um commit anterior, o plano é cada crud ter um blueprint

--- a/templates/admin/layout.html
+++ b/templates/admin/layout.html
@@ -57,18 +57,18 @@
                     <li><a href="" class="dropdown-toggle" data-toggle="dropdown">Disciplinas
                         <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                        <li><a href="{{ url_for('admin.subjects') }}">Adicionar Disciplinas</a></li>
-                        <li><a href="{{ url_for('admin.edit_subjects') }}">Editar Disciplina</a></li>
-                        <li><a href="{{ url_for('admin.delete_subjects') }}">Retirar Disciplinas</a></li>
+                        <li><a href="{{ url_for('crud_subjects.subjects', course_type='Mestrado') }}">Adicionar Disciplinas</a></li>
+                        <li><a href="{{ url_for('crud_subjects.edit_subjects', course_type='Mestrado') }}">Editar Disciplina</a></li>
+                        <li><a href="{{ url_for('crud_subjects.delete_subjects', course_type='Mestrado') }}">Retirar Disciplinas</a></li>
                         </ul>
                     </li>
-                    {% if current_user.pg_initials in 'PPGSS PPGP' %}
+                    {% if current_user.pg_initials in 'PPGSS PPGA PPGTUR' %}
                     <li><a href="" class="dropdown-toggle" data-toggle="dropdown">Disciplinas(Doutorado)
                         <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                        <li><a href="">Adicionar Disciplinas</a></li>
-                        <li><a href="">Editar Disciplina</a></li>
-                        <li><a href="">Retirar Disciplinas</a></li>
+                        <li><a href="{{ url_for('crud_subjects.subjects', course_type='Doutorado') }}">Adicionar Disciplinas</a></li>
+                        <li><a href="{{ url_for('crud_subjects.edit_subjects', course_type='Doutorado') }}">Editar Disciplina</a></li>
+                        <li><a href="{{ url_for('crud_subjects.delete_subjects', course_type='Doutorado') }}">Retirar Disciplinas</a></li>
                         </ul>
                     </li>
                     {% endif %}
