--- a/templates/admin/delete_subjects.html
+++ b/templates/admin/delete_subjects.html
@@ -86,7 +86,7 @@ $(document).ready(function() {
 <button id="edit" type="button" class="btn btn-default">Selecionar</button>
 </div>
 <div class="col-xs-8" style="margin-left: -5%">
-<form method="POST" id="form-edit" action="{{ url_for('admin.delete_subjects') }}">
+<form method="POST" id="form-edit" action="{{ url_for('crud_subjects.delete_subjects') }}">
     <div class="form-group">
     {{ form.csrf_token }}
     {{ form.index(required='true', style="display:none;") }}
