Mudanças na aparencia e adicionado informações de contato
Foi adicionado um view para editar as informações de contato, devido a natureza das informações fica evidente que não é necessário adicionar nem deletar nada, apenas editar, em relação aos templates só mudei mesmo a aparencia, coloquei quase tudo em um painel pra ficar mais agradável estéticamente

--- a/templates/admin/add_events.html
+++ b/templates/admin/add_events.html
@@ -22,10 +22,12 @@ $(function() {
 <div class="container">
 <div class="row">
 <div class="col-xs-6" style="margin-left: -5%">
-<header style="margin-top : 6.5%">
-    <h2>Eventos</h2>
-</header>
-
+<br/>
+<div class="panel panel-danger">
+<div class="panel-heading text-center">
+    <h4>Adicionar evento<h4/>
+</div>
+<div class="panel-body">
 <form method="POST" action="{{ url_for('admin.add_events') }}">
     <div class="form-group">
     {{ form.csrf_token }}
@@ -51,6 +53,12 @@ $(function() {
     {{ form.create(class="form-control")}}
     </div>
 </form>
+<br/>
+<p>
+    Você pode <a onclick="window.history.go(-1); return false;" href="#">voltar à página anterior</a>.
+</p>
+</div>
+</div>
 </div>
 </div>
 </div>
