--- a/templates/admin/delete_articles.html
+++ b/templates/admin/delete_articles.html
@@ -29,7 +29,7 @@ $(document).ready(function() {
 
     $("button").click(function(){
         var indexInArticles = $("select#list").val();
-        $("#form-edit").css("display","block");
+        $("#form-edit").css("visibility","visible");
         $("input[name=title]").val(publications.articles[indexInArticles].title);
         $("input[name=subtitle]").val(publications.articles[indexInArticles].subtitle);
         $("input[name=authors]").val(publications.articles[indexInArticles].authors);
@@ -49,15 +49,19 @@ $(document).ready(function() {
 {% block content %}
 <div class="container">
 <div class="row">
-<div class="col-xs-12" style="margin-left: -5%">
-<header class="page-header">
-    <h2>Artigos</h2>
-</header>
-<h4>Selecione o artigo</h4>
+<br/>
+<div class="col-xs-10">
+<div class="panel panel-danger" style="margin-left: -6%">
+<div class="panel-heading text-center">
+    <h4>Deletar artigo<h4/>
+</div>
+<div class="panel-body">
+<div class="col-xs-10">
+<h5>Selecione o artigo</h5>
 <select id="list"></select>
 <button id="edit" type="button" class="btn btn-default">Selecionar</button>
 </div>
-<div class="col-xs-8" style="margin-left: -5%">
+<div class="col-xs-10">
 <form method="POST" id="form-edit" action="{{ url_for('crud_articles.delete_article') }}">
     <div class="form-group">
     {{ form.csrf_token }}
@@ -94,6 +98,9 @@ $(document).ready(function() {
     {{ form.create(class="form-control")}}
     </div>
 </form>
+</div>
+</div>
+</div>
 </div>
 </div>
 </div>
