--- a/templates/admin/add_professors.html
+++ b/templates/admin/add_professors.html
@@ -5,16 +5,12 @@
 <div class="container">
 <div class="row">
 <div class="col-xs-6" style="margin-left: -5%">
-<header style="margin-top : 6.5%">
-    <h2>Professores</h2>
-</header>
-
-{% if success_msg %}
-    <div class="form-success">
-        <p>{{ success_msg }}</p>
-    </div>
-{% endif %}
-
+<br/>
+<div class="panel panel-danger">
+<div class="panel-heading text-center">
+    <h4>Adicionar docente<h4/>
+</div>
+<div class="panel-body">
 <form method="POST" action="{{ url_for('admin.add_professors') }}">
     <div class="form-group">
     {{ form.csrf_token }}
@@ -34,13 +30,15 @@
     {{ form.create(class="form-control") }}
     </div>
 </form>
-<br/>
+<p>
+    Você pode <a onclick="window.history.go(-1); return false;" href="#">voltar à página anterior</a>.
+</p>
+
+</div>
+</div>
 </div>
 </div>
 </div>
 
-<p>
-    Você pode <a onclick="window.history.go(-1); return false;" href="#">voltar à página anterior</a>.
-</p>
 
 {% endblock %}
