--- a/templates/admin/add_staff.html
+++ b/templates/admin/add_staff.html
@@ -25,16 +25,12 @@ $(document).ready(function() {
 <div class="container">
 <div class="row">
 <div class="col-xs-6" style="margin-left: -5%">
-<header style="margin-top: 6.5%">
-    <h2>Equipe</h2>
-</header>
-
-{% if success_msg %}
-    <div class="form-success">
-        <p>{{ success_msg }}</p>
-    </div>
-{% endif %}
-
+<br/>
+<div class="panel panel-danger">
+<div class="panel-heading text-center">
+    <h4>Adicionar servidor<h4/>
+</div>
+<div class="panel-body">
 <form method="POST" action="{{ url_for('admin.add_staff') }}">
     <div class="form-group">
     {{ form.csrf_token }}
@@ -61,12 +57,12 @@ $(document).ready(function() {
     </div>    
 </form>
 <br/>
-</div>
-</div>
-</div>
-
 <p>
     Você pode <a onclick="window.history.go(-1); return false;" href="#">voltar à página anterior</a>.
 </p>
-
+</div>
+</div>
+</div>
+</div>
+</div>
 {% endblock %}
