--- a/templates/admin/delete_covenants.html
+++ b/templates/admin/delete_covenants.html
@@ -29,7 +29,7 @@ $(document).ready(function() {
 
     $("button").click(function(){
         var indexInCovenants = $("select#list").val();
-        $("#form-edit").css("display", "block");
+        $("#form-edit").css("visibility", "visible");
         $("input[name=name]").val(integrations.institutionsWithCovenant[indexInCovenants].name);
         $("input[name=initials]").val(integrations.institutionsWithCovenant[indexInCovenants].initials);
         $("input[name=index]").val(indexInCovenants);
@@ -42,15 +42,19 @@ $(document).ready(function() {
 {% block content %}
 <div class="container">
 <div class="row">
-<div class="col-xs-12" style="margin-left: -5%">
-<header class="page-header">
-    <h2>Convênio</h2>
-</header>
-<h4>Selecione um convênio</h4>
+<br/>
+<div class="col-xs-12">
+<div class="panel panel-danger" style="margin-left: -6%">
+<div class="panel-heading text-center">
+    <h4>Deletar convênio<h4/>
+</div>
+<div class="panel-body">
+<div class="col-xs-10">
+<h5>Selecione o convênio</h5>
 <select id="list"></select>
 <button id="edit" type="button" class="btn btn-default">Selecionar</button>
 </div>
-<div class="col-xs-10" style="margin-left: -5%">
+<div class="col-xs-10">
     <form method="POST" id="form-edit" action="{{ url_for('admin.delete_covenants') }}">
     <div class="form-group">
     {{ form.csrf_token }}
@@ -65,6 +69,9 @@ $(document).ready(function() {
     {{ form.create(class="form-control") }}
     </div>
 </form>
+</div>
+</div>
+</div>
 </div>
 </div>
 </div>
