--- a/templates/admin/delete_professors.html
+++ b/templates/admin/delete_professors.html
@@ -30,7 +30,7 @@ $(document).ready(function() {
 
     $("button").click(function(){
         var indexInProfessors = $("select#list").val();
-        $("#form-edit").css("display", "block");
+        $("#form-edit").css("visibility", "visible");
         $("input[name=name]").val(professors.professors[indexInProfessors].name);
         $("input[name=rank]").val(professors.professors[indexInProfessors].rank);
         $("input[name=lattes]").val(professors.professors[indexInProfessors].lattes);
@@ -44,20 +44,25 @@ $(document).ready(function() {
 {% block content %}
 <div class="container">
 <div class="row">
-<div class="col-xs-6" style="margin-left: -5%">
-<header style="margin-top : 6.5%">
-    <h2>Professor</h2>
-</header>
-<h4>Selecione o professor</h4>
+<br/>
+<div class="col-xs-10">
+<div class="panel panel-danger" style="margin-left: -6%">
+<div class="panel-heading text-center">
+    <h4>Deletar docente<h4/>
+</div>
+<div class="panel-body">
+<div class="col-xs-10">
+<h5>Selecione o docente</h5>
 <select id="list"></select>
 <button id="edit" type="button" class="btn btn-default">Selecionar</button>
 </div>
-<div class="col-xs-10" style="margin-left: -5%">
+<div class="col-xs-10">
 <form method="POST" id="form-edit" action="{{ url_for('admin.delete_professors') }}">
     <div class="form-group">
     {{ form.csrf_token }}
     {{ form.index(required='true', style="display:none;", readonly="readonly") }}
     
+    <br/>
     {{ form.name.label }}<br/>
     {{ form.name(required='true', class="form-control", readonly="readonly") }}
     <br/>
@@ -73,6 +78,9 @@ $(document).ready(function() {
     {{ form.create(class="form-control")}}
     </div>
 </form>
+</div>
+</div>
+</div>
 </div>
 </div>
 </div>
