--- a/templates/admin/edit_books.html
+++ b/templates/admin/edit_books.html
@@ -29,7 +29,7 @@ $(document).ready(function() {
 
     $("button").click(function(){
         var indexInBooks = $("select#list").val();
-        $("#form-edit").css("display","block");
+        $("#form-edit").css("visibility","visible");
         $("input[name=title]").val(publications.books[indexInBooks].title);
         $("input[name=subtitle]").val(publications.books[indexInBooks].subtitle);
         $("input[name=authors]").val(publications.books[indexInBooks].authors);
@@ -46,15 +46,19 @@ $(document).ready(function() {
 {% block content %}
 <div class="container">
 <div class="row">
-<div class="col-xs-12" style="margin-left: -5%">
-<header class="page-header">
-    <h2>Livros</h2>
-</header>
-<h4>Selecione o livro</h4>
+<br/>
+<div class="col-xs-12">
+<div class="panel panel-danger" style="margin-left: -6%">
+<div class="panel-heading text-center">
+    <h4>Editar livro<h4/>
+</div>
+<div class="panel-body">
+<div class="col-xs-10">
+<h5>Selecione o livro</h5>
 <select id="list"></select>
 <button id="edit" type="button" class="btn btn-default">Selecionar</button>
 </div>
-<div class="col-xs-8" style="margin-left: -5%">
+<div class="col-xs-10">
 <form method="POST" id="form-edit" action="{{ url_for('crud_books.edit_book') }}">
     <div class="form-group">
     {{ form.csrf_token }}
@@ -85,6 +89,9 @@ $(document).ready(function() {
     {{ form.create(class="form-control")}}
     </div>
 </form>
+</div>
+</div>
+</div>
 </div>
 </div>
 </div>
