--- a/templates/admin/edit_participations.html
+++ b/templates/admin/edit_participations.html
@@ -28,7 +28,7 @@ $(document).ready(function() {
 
     $("button").click(function(){
         var indexInParticipations = $("select#list").val();
-        $("#form-edit").css("display", "block");
+        $("#form-edit").css("visibility", "visible");
         $("input[name=title]").val(participations.participationsInEvents[indexInParticipations].title);
         $("textarea[name=description]").val(participations.participationsInEvents[indexInParticipations].description);
         $("input[name=year]").val(participations.participationsInEvents[indexInParticipations].year);
@@ -43,15 +43,19 @@ $(document).ready(function() {
 {% block content %}
 <div class="container">
 <div class="row">
-<div class="col-xs-12" style="margin-left: -5%">
-<header class="page-header">
-    <h2>Intercâmbio</h2>
-</header>
-<h4>Selecione o intercâmbio</h4>
+<br/>
+<div class="col-xs-12">
+<div class="panel panel-danger" style="margin-left: -6%">
+<div class="panel-heading text-center">
+    <h4>Editar intercâmbio<h4/>
+</div>
+<div class="panel-body">
+<div class="col-xs-10">
+<h5>Selecione o intercâmbio</h5>
 <select id="list"></select>
 <button id="edit" type="button" class="btn btn-default">Selecionar</button>
 </div>
-<div class="col-xs-10" style="margin-left: -5%">
+<div class="col-xs-10">
 <form method="POST" id="form-edit" action="{{ url_for('admin.edit_participations') }}">
     <div class="form-group">
     {{ form.csrf_token }}
@@ -73,6 +77,9 @@ $(document).ready(function() {
     {{ form.create(class="form-control") }}
     </div>
 </form>
+</div>
+</div>
+</div>
 </div>
 </div>
 </div>
