--- a/templates/admin/layout.html
+++ b/templates/admin/layout.html
@@ -54,6 +54,7 @@
                 </ul>
                 <h6><strong>EDITAR PÁGINAS</strong></h6>
                 <ul class="nav nav-sidebar">
+                    <li><a href="{{ url_for('crud_attendances.edit_attendance') }}">Informações para contato</a></li>
                     <li><a href="" class="dropdown-toggle" data-toggle="dropdown">Disciplinas
                         <span class="caret"></span></a>
                         <ul class="dropdown-menu">
