--- a/templates/admin/subjects.html
+++ b/templates/admin/subjects.html
@@ -5,10 +5,12 @@
 <div class="container">
 <div class="row">
 <div class="col-xs-6" style="margin-left: -5%">
-<header style="margin-top : 6.5%">
-    <h2>Disciplinas</h2>
-</header>
-
+<br/>
+<div class="panel panel-danger">
+<div class="panel-heading text-center">
+    <h4>Adicionar Disciplina<h4/>
+</div>
+<div class="panel-body">
 <form method="POST" action="{{ url_for('crud_subjects.subjects') }}">
     <div class="form-group">
     {{ form.csrf_token }}
@@ -45,12 +47,14 @@
     
 </form>
 <br/>
-</div>
-</div>
-</div>
-
 <p>
     Você pode <a onclick="window.history.go(-1); return false;" href="#">voltar à página anterior</a>.
 </p>
+
+</div>
+</div>
+</div>
+</div>
+</div>
 
 {% endblock %}
